--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="en" dir="ltr">
 <head>
   <title>Vladislav Nezhutin</title>
+
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <meta name="description" property="og:description" content="Full-stack Web developer, Almaty" />
 
   <meta property="og:title" content="Vladislav Nezhutin" />
   <meta property="og:url" content="https://nezhutin.com" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://nezhutin.com/headhot.jpg" />
+  <meta property="og:image:width" content="600" />
+  <meta property="og:image:height" content="600" />
 
+  <link rel="shortcut icon" href="/favicon.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
 
   <style>
