--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Vladislav Nezhutin" />
   <meta property="og:url" content="https://nezhutin.com" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://nezhutin.com/headhot.jpg" />
+  <meta property="og:image" content="https://nezhutin.com/headshot.jpg" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
 
