--- a/index.html
+++ b/index.html
@@ -18,8 +18,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
 
   <style>
+
+    /*
     :root {
-      font: 20px / 1.5 "Outfit", sans-serif;
+      background-color: hsl(0 0 15);
+      color: hsl(0 0 80);
+    }
+
+    a {
+      color: hsl(200 50 70);
+
+      &:visited {
+        color: hsl(250 50 70);
+      }
+    }
+    */
+
+    :root {
+      font: 200 20px / 1.5 "Outfit", sans-serif;
     }
 
     body {
@@ -31,30 +47,39 @@
 
     .greeting {
       text-transform: uppercase;
-      margin: -1rem 0;
+      margin: 0 0 -1rem 0;
       font-weight: 200;
     }
 
     .title {
       font-weight: 500;
       font-size: 1.8rem;
-      margin: .5rem 0;
+      margin: 1rem 0;
       text-decoration: underline;
     }
 
     .h2 {
+      font-size: 1.5rem;
       font-weight: 400;
+      margin: 1rem 0;
     }
 
     .headshot {
       border-radius: 50%;
+      background-color: #eee;
+      /* responsive */
       max-width: 100%;
       height: auto;
+      /* center alt text */
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
     }
 
     .contact {
       all: unset;
       display: block;
+      margin: 1rem 0;
     }
 
     @media (min-width: 800px) {
